[package]
name = "fast-surface-nets"
description = "A fast, chunk-friendly implementation of Naive Surface Nets on regular grids."
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bonsairobo/fast-surface-nets-rs"
keywords = ["graphics", "isosurface", "mesh", "voxel"]

[dependencies]
glam = "0.27" # For SIMD Vec3A
ndshape = "0.3"
