[package]
name = "fast-surface-nets-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.7", default-features = false, features = ["bevy_winit", "render", "png", "x11"] }
obj-exporter = "0.2"
rayon = "1.8"
rand = "0.8"

ilattice = { git = "https://github.com/bonsairobo/ilattice-rs", branch = "main", default-features = false, features = ["glam"]}

[dependencies.fast-surface-nets]
path = ".."

[[example]]
name = "render"
path = "render/main.rs"

[[example]]
name = "rayon-chunks"
path = "rayon-chunks/main.rs"
