[package]
name = "rayon-chunks-example"
version = "0.1.0"
edition = "2018"

[dependencies]
ilattice = { git="https://github.com/bonsairobo/ilattice-rs.git", rev="7b8b723", default-features = false, features = ["glam", "morton-encoding"]}
rayon = "1.5"
itertools = "0.10"
obj-exporter = "0.2"
rand = "0.8"
rand_chacha = "0.3"

[dependencies.fast-surface-nets]
path = "../.."
